# Ceylan-Heavy

./: Makefile.am  Makefile.cross  README.md  libtool.m4
src/code/: Ceylan.h  CeylanConfig.h  CeylanConfigForNintendoDS.h  CeylanConfigForWindows.h  Makefile.am  Makefile.cross
src/code/generic/: CeylanBasicResourceManager.h  CeylanCountedPointer.h  CeylanDocMainPage.h  CeylanException.cc  CeylanException.h  CeylanFunctor.cc  CeylanFunctor.h  CeylanGenericIncludes.h  CeylanHeaderVersion.cc  CeylanHeaderVersion.cc.in  CeylanHeaderVersion.h  CeylanHeaderVersion.h.in  CeylanHolder.h  CeylanLibtoolVersion.cc  CeylanLibtoolVersion.h  CeylanLocale.cc  CeylanLocale.h  CeylanOperators.cc  CeylanOperators.h  CeylanRegularExpression.cc  CeylanRegularExpression.h  CeylanResource.cc  CeylanResource.h  CeylanResourceManager.cc  CeylanResourceManager.h  CeylanSingleton.cc  CeylanSingleton.h  CeylanSmartResource.cc  CeylanSmartResource.h  CeylanSmartResourceManager.h  CeylanStringUtils.cc  CeylanStringUtils.h  CeylanTestException.cc  CeylanTestException.h  CeylanTextBuffer.cc  CeylanTextBuffer.h  CeylanTimestamp.cc  CeylanTimestamp.h  CeylanTree.cc  CeylanTree.h  (+10 more)
src/code/interfaces/: CeylanCallableEventSource.cc  CeylanCallableEventSource.h  CeylanCallerEventListener.cc  CeylanCallerEventListener.h  CeylanClonable.cc  CeylanClonable.h  CeylanController.cc  CeylanController.h  CeylanCountable.cc  CeylanCountable.h  CeylanDisplayable.h  CeylanEvent.cc  CeylanEvent.h  CeylanEventListener.cc  CeylanEventListener.h  CeylanEventSource.cc  CeylanEventSource.h  CeylanGenericController.cc  CeylanGenericController.h  CeylanGenericDefines.h  CeylanGenericMVCDefines.h  CeylanGenericModel.cc  CeylanGenericModel.h  CeylanGenericView.cc  CeylanGenericView.h  CeylanHashable.cc  CeylanHashable.h  CeylanIdentifier.cc  CeylanIdentifier.h  CeylanIdentifierOwner.cc  CeylanIdentifierOwner.h  CeylanInputDevice.cc  CeylanInputDevice.h  CeylanInterfacesIncludes.h  CeylanLoadable.cc  CeylanLoadable.h  CeylanLocatable.cc  CeylanLocatable.h  CeylanLocatable2D.cc  CeylanLocatable2D.h  (+28 more)
src/code/logs/: CeylanLog.cc  CeylanLog.h  CeylanLogAggregator.cc  CeylanLogAggregator.h  CeylanLogAggregatorConsole.cc  CeylanLogAggregatorConsole.h  CeylanLogAggregatorHTML.cc  CeylanLogAggregatorHTML.h  CeylanLogAggregatorHTMLFragments.h  CeylanLogAggregatorRaw.cc  CeylanLogAggregatorRaw.h  CeylanLogChannel.cc  CeylanLogChannel.h  CeylanLogHolder.cc  CeylanLogHolder.h  CeylanLogIncludes.h  CeylanLogLight.h  CeylanLogListener.cc  CeylanLogListener.h  CeylanLogMessage.cc  CeylanLogMessage.h  CeylanLogPlug.cc  CeylanLogPlug.h  CeylanLogPlugClassical.cc  CeylanLogPlugClassical.h  CeylanLogPlugConsole.cc  CeylanLogPlugConsole.h  CeylanLogPlugHTML.cc  CeylanLogPlugHTML.h  CeylanLogPlugNull.cc  CeylanLogPlugNull.h  CeylanLogSource.cc  CeylanLogSource.h  CeylanLogTransport.cc  CeylanLogTransport.h  CeylanLogTransportListenerNull.cc  (+7 more)
src/conf/: CeylanSettings.inc  MakeColors.inc.in  Makefile.am  ceylan-valgrind-suppressions.txt  generateBugReport.sh
test/: Ceylan-0.3-tests.vcproj  MakeConfigure  Makefile.am  Makefile.cross  autogen.sh  ceylan.m4  checkConfigure.sh  cleanGeneratedConfigFiles.sh  compare-visual-studio-projects.sh  configure-template.ac  playTests.sh  run-valgrind.sh  source-me-to-update-Ceylan-path.sh
test/cross-tests/: CeylanDefaultMain.arm7.cc  GNUmakefile  Makefile  testCeylan.arm9.cc  testCeylanBasic.arm7.c  testCeylanBasic.arm9.cc  testCeylanFIFO.arm7.c  testCeylanFIFO.arm9.cc  testCeylanLibfatFilesystem.arm9.cc  testCeylanLogSystem.arm9.cc  testCeylanTextConsole.arm9.cc
test/generic/: Makefile.am  testCeylanBasicDatatypes.cc  testCeylanBasicResourceManager.cc  testCeylanCommandLineOptions.cc  testCeylanCountedPointer.cc  testCeylanHolder.cc  testCeylanLoadable.cc  testCeylanLocale.cc  testCeylanMostBasic.cc  testCeylanOperators.cc  testCeylanRegularExpression.cc  testCeylanSingleton.cc  testCeylanSmartResourceManager.cc  testCeylanStringUtils.cc  testCeylanTimestamp.cc  testCeylanTree.cc  testCeylanUtils.cc  testCeylanVersion.cc  testCeylanWaitForKey.cc
test/interfaces/: Makefile.am  testCeylanClonable.cc  testCeylanCountable.cc  testCeylanEvents.cc  testCeylanGenericMVC.cc  testCeylanLocatable.cc  testCeylanLockable.cc  testCeylanMVCFramework.cc  testCeylanObject.cc  testCeylanObjectIdentifier.cc  testCeylanTextDisplayable.cc
test/logs/: Makefile.am  testCeylanChannel.cc  testCeylanFullLogSystem.cc  testCeylanLogAggregatorHTML.cc  testCeylanLogAggregatorRaw.cc  testCeylanLogAggregatorRawCached.cc  testCeylanLogAggregatorRawNonImmediate.cc  testCeylanLogHolder.cc  testCeylanLogMessage.cc  testCeylanLogPlug.cc  testCeylanLogPlugClassical.cc  testCeylanLogPlugHTML.cc  testCeylanLogPlugUnderStress.cc  testCeylanLogSource.cc  testCeylanLogTransportListenerRaw.cc
test/maths/: Makefile.am  testCeylanLinear2D.cc  testCeylanLinear3D.cc  testCeylanMathsBasic.cc  testCeylanRandomGeneratorFromPDF.cc  testCeylanWhiteNoiseGenerator.cc
test/middleware/: Makefile.am  playTests-local.sh  testCeylanLightWeightMarshaller.cc  testCeylanLwMarshaller.cc  testCeylanMultiLwMarshalledServer.cc  testCeylanMultiLwMrshSrv.cc  testCeylanMultiLwProtocolServer.cc  testCeylanMultiLwPtclSrv.cc  testCeylanProtocolClient.cc
test/modules/: Makefile.am  ceylan-test-plugin.cc  ceylan-test-unknown-plugin.cc  testCeylanFeatures.cc  testCeylanModule.cc  testCeylanPlugin.cc  testCeylanXMLParser.cc
test/network/: Makefile.am  playTests-local.sh  testCeylanClientStream.cc  testCeylanIPAddressvFour.cc  testCeylanMultiplexedServerStream.cc  testCeylanMultiplexedSrvStream.cc  testCeylanNetwork.cc  testCeylanSequentialServerStream.cc  testCeylanSequentialSrvStream.cc  testCeylanServerStream.cc
test/system/: Makefile.am  plotSchedulingGranularity.p  plotTestSchedulingGranularity.p  testCeylanConsole.cc  testCeylanEnvironmentVariable.cc  testCeylanFileAndDirectories.cc  testCeylanFileLocator.cc  testCeylanMemoryStream.cc  testCeylanNetwork.cc  testCeylanSignals.cc  testCeylanSystem.cc  testCeylanSystemInformation.cc  testCeylanThread.cc  testCeylanTime.cc
(+631 files in other folders)
