

testsgenericdir=@CEYLAN_TEST_DIR@/generic

testsgeneric_CXXFLAGS = @AM_CXXFLAGS@

testsgeneric_PROGRAMS = \
	testCeylanBasicResourceManager            \
	testCeylanCountedPointer                  \
	testCeylanMostBasic                       \
	testCeylanOperators                       \
	testCeylanRegularExpression               \
	testCeylanSingleton                       \
	testCeylanSmartResourceManager            \
	testCeylanStringUtils                     \
	testCeylanTimestamp                       \
	testCeylanUtils                           \
	testCeylanVersion                         \
	testCeylanWaitForKey             


testCeylanBasicResourceManager_SOURCES = testCeylanBasicResourceManager.cc
testCeylanCountedPointer_SOURCES       = testCeylanCountedPointer.cc
testCeylanMostBasic_SOURCES            = testCeylanMostBasic.cc
testCeylanOperators_SOURCES            = testCeylanOperators.cc
testCeylanRegularExpression_SOURCES    = testCeylanRegularExpression.cc
testCeylanSingleton_SOURCES            = testCeylanSingleton.cc
testCeylanSmartResourceManager_SOURCES = testCeylanSmartResourceManager.cc
testCeylanStringUtils_SOURCES          = testCeylanStringUtils.cc
testCeylanTimestamp_SOURCES            = testCeylanTimestamp.cc
testCeylanUtils_SOURCES                = testCeylanUtils.cc
testCeylanVersion_SOURCES              = testCeylanVersion.cc
testCeylanWaitForKey_SOURCES           = testCeylanWaitForKey.cc


#testCeylanBasicResourceManager_LDADD   = @MATHLIB@

