

testsgenericdir=@CEYLAN_TEST_DIR@/generic

testsgeneric_CXXFLAGS = @AM_CXXFLAGS@

testsgeneric_PROGRAMS = \
	testCeylanBasicDatatypes.exe                  \
	testCeylanBasicResourceManager.exe            \
	testCeylanCommandLineOptions.exe              \
	testCeylanCountedPointer.exe                  \
	testCeylanMostBasic.exe                       \
	testCeylanOperators.exe                       \
	testCeylanRegularExpression.exe               \
	testCeylanSingleton.exe                       \
	testCeylanSmartResourceManager.exe            \
	testCeylanStringUtils.exe                     \
	testCeylanTimestamp.exe                       \
	testCeylanTree.exe                            \
	testCeylanUtils.exe                           \
	testCeylanVersion.exe                         \
	testCeylanWaitForKey.exe             


testCeylanBasicDatatypes_exe_SOURCES       = testCeylanBasicDatatypes.cc
testCeylanBasicResourceManager_exe_SOURCES = testCeylanBasicResourceManager.cc
testCeylanCommandLineOptions_exe_SOURCES   = testCeylanCommandLineOptions.cc
testCeylanCountedPointer_exe_SOURCES       = testCeylanCountedPointer.cc
testCeylanMostBasic_exe_SOURCES            = testCeylanMostBasic.cc
testCeylanOperators_exe_SOURCES            = testCeylanOperators.cc
testCeylanRegularExpression_exe_SOURCES    = testCeylanRegularExpression.cc
testCeylanSingleton_exe_SOURCES            = testCeylanSingleton.cc
testCeylanSmartResourceManager_exe_SOURCES = testCeylanSmartResourceManager.cc
testCeylanStringUtils_exe_SOURCES          = testCeylanStringUtils.cc
testCeylanTimestamp_exe_SOURCES            = testCeylanTimestamp.cc
testCeylanTree_exe_SOURCES                 = testCeylanTree.cc
testCeylanUtils_exe_SOURCES                = testCeylanUtils.cc
testCeylanVersion_exe_SOURCES              = testCeylanVersion.cc
testCeylanWaitForKey_exe_SOURCES           = testCeylanWaitForKey.cc


#testCeylanBasicResourceManager_LDADD   = @MATHLIB@

