SUFFIXES = .cc .h


testsinterfacesdir=@CEYLAN_TEST_DIR@/interfaces


testsinterfaces_PROGRAMS = \
	testCeylanClonable                     \
	testCeylanCountable                    \
	testCeylanEvents                       \
	testCeylanLocatable                    \
	testCeylanLockable                     \
	testCeylanMVCFramework                 \
	testCeylanObject                       \
	testCeylanObjectIdentifier             \
	testCeylanTextDisplayable


testCeylanClonable_SOURCES         = testCeylanClonable.cc
testCeylanCountable_SOURCES        = testCeylanCountable.cc
testCeylanEvents_SOURCES           = testCeylanEvents.cc
testCeylanLocatable_SOURCES        = testCeylanLocatable.cc
testCeylanLockable_SOURCES         = testCeylanLockable.cc
testCeylanMVCFramework_SOURCES     = testCeylanMVCFramework.cc
testCeylanObject_SOURCES           = testCeylanObject.cc
testCeylanObjectIdentifier_SOURCES = testCeylanObjectIdentifier.cc
testCeylanTextDisplayable_SOURCES  = testCeylanTextDisplayable.cc
