SUFFIXES = .cc .h


testsinterfacesdir=@CEYLAN_TEST_DIR@/interfaces


testsinterfaces_PROGRAMS = \
	testCeylanClonable.exe                     \
	testCeylanCountable.exe                    \
	testCeylanEvents.exe                       \
	testCeylanLocatable.exe                    \
	testCeylanLockable.exe                     \
	testCeylanMVCFramework.exe                 \
	testCeylanObject.exe                       \
	testCeylanObjectIdentifier.exe             \
	testCeylanTextDisplayable.exe


testCeylanClonable_exe_SOURCES         = testCeylanClonable.cc
testCeylanCountable_exe_SOURCES        = testCeylanCountable.cc
testCeylanEvents_exe_SOURCES           = testCeylanEvents.cc
testCeylanLocatable_exe_SOURCES        = testCeylanLocatable.cc
testCeylanLockable_exe_SOURCES         = testCeylanLockable.cc
testCeylanMVCFramework_exe_SOURCES     = testCeylanMVCFramework.cc
testCeylanObject_exe_SOURCES           = testCeylanObject.cc
testCeylanObjectIdentifier_exe_SOURCES = testCeylanObjectIdentifier.cc
testCeylanTextDisplayable_exe_SOURCES  = testCeylanTextDisplayable.cc
