SUFFIXES = .cc .h


testslogsdir=@CEYLAN_TEST_DIR@/logs


testslogs_PROGRAMS = \
	testCeylanChannel                         \
	testCeylanFullLogSystem                   \
	testCeylanLogAggregatorHTML               \
	testCeylanLogAggregatorRaw                \
	testCeylanLogAggregatorRawNonImmediate    \
	testCeylanLogHolder                       \
	testCeylanLogMessage                      \
	testCeylanLogPlug                         \
	testCeylanLogPlugClassical                \
	testCeylanLogPlugHTML                     \
	testCeylanLogPlugUnderStress              \
	testCeylanLogSource                       \
	testCeylanLogTransportListenerRaw


testCeylanChannel_SOURCES                      = testCeylanChannel.cc
testCeylanFullLogSystem_SOURCES                = testCeylanFullLogSystem.cc
testCeylanLogAggregatorHTML_SOURCES            = testCeylanLogAggregatorHTML.cc
testCeylanLogAggregatorRaw_SOURCES             = testCeylanLogAggregatorRaw.cc
testCeylanLogAggregatorRawNonImmediate_SOURCES = \
	testCeylanLogAggregatorRawNonImmediate.cc
testCeylanLogHolder_SOURCES                    = testCeylanLogHolder.cc
testCeylanLogMessage_SOURCES                   = testCeylanLogMessage.cc
testCeylanLogPlug_SOURCES                      = testCeylanLogPlug.cc
testCeylanLogPlugClassical_SOURCES             = testCeylanLogPlugClassical.cc
testCeylanLogPlugHTML_SOURCES                  = testCeylanLogPlugHTML.cc
testCeylanLogPlugUnderStress_SOURCES           = testCeylanLogPlugUnderStress.cc
testCeylanLogSource_SOURCES                    = testCeylanLogSource.cc
testCeylanLogTransportListenerRaw_SOURCES      = \
	testCeylanLogTransportListenerRaw.cc
