SUFFIXES = .cc .h


testslogsdir=@CEYLAN_TEST_DIR@/logs


testslogs_PROGRAMS = \
	testCeylanChannel.exe                         \
	testCeylanFullLogSystem.exe                   \
	testCeylanLogAggregatorHTML.exe               \
	testCeylanLogAggregatorRaw.exe                \
	testCeylanLogAggregatorRawCached.exe          \
	testCeylanLogHolder.exe                       \
	testCeylanLogMessage.exe                      \
	testCeylanLogPlug.exe                         \
	testCeylanLogPlugClassical.exe                \
	testCeylanLogPlugHTML.exe                     \
	testCeylanLogPlugUnderStress.exe              \
	testCeylanLogSource.exe                       \
	testCeylanLogTransportListenerRaw.exe


testCeylanChannel_exe_SOURCES                      = testCeylanChannel.cc

testCeylanFullLogSystem_exe_SOURCES                = testCeylanFullLogSystem.cc

testCeylanLogAggregatorHTML_exe_SOURCES            = \
	testCeylanLogAggregatorHTML.cc
	
testCeylanLogAggregatorRaw_exe_SOURCES             = \
	testCeylanLogAggregatorRaw.cc
	
testCeylanLogAggregatorRawCached_exe_SOURCES       = \
	testCeylanLogAggregatorRawCached.cc
	
testCeylanLogHolder_exe_SOURCES                    = testCeylanLogHolder.cc

testCeylanLogMessage_exe_SOURCES                   = testCeylanLogMessage.cc

testCeylanLogPlug_exe_SOURCES                      = testCeylanLogPlug.cc

testCeylanLogPlugClassical_exe_SOURCES             = \
	testCeylanLogPlugClassical.cc
	
testCeylanLogPlugHTML_exe_SOURCES                  = testCeylanLogPlugHTML.cc

testCeylanLogPlugUnderStress_exe_SOURCES           = \
	testCeylanLogPlugUnderStress.cc
	
testCeylanLogSource_exe_SOURCES                    = testCeylanLogSource.cc

testCeylanLogTransportListenerRaw_exe_SOURCES      = \
	testCeylanLogTransportListenerRaw.cc
