SUFFIXES = .cc .h


testsmathsdir=@CEYLAN_TEST_DIR@/maths


testsmaths_PROGRAMS = \
	testCeylanLinear2D                     \
	testCeylanLinear3D                     \
	testCeylanMathsBasic                   \
	testCeylanRandomGeneratorFromPDF       \
	testCeylanWhiteNoiseGenerator


testCeylanLinear2D_SOURCES               = testCeylanLinear2D.cc
testCeylanLinear3D_SOURCES               = testCeylanLinear3D.cc
testCeylanMathsBasic_SOURCES             = testCeylanMathsBasic.cc
testCeylanRandomGeneratorFromPDF_SOURCES = testCeylanRandomGeneratorFromPDF.cc
testCeylanWhiteNoiseGenerator_SOURCES    = testCeylanWhiteNoiseGenerator.cc
