SUFFIXES = .cc .h


testsmathsdir=@CEYLAN_TEST_DIR@/maths


testsmaths_PROGRAMS = \
	testCeylanLinear2D.exe                     \
	testCeylanLinear3D.exe                     \
	testCeylanMathsBasic.exe                   \
	testCeylanRandomGeneratorFromPDF.exe       \
	testCeylanWhiteNoiseGenerator.exe


testCeylanLinear2D_exe_SOURCES               = testCeylanLinear2D.cc

testCeylanLinear3D_exe_SOURCES               = testCeylanLinear3D.cc

testCeylanMathsBasic_exe_SOURCES             = testCeylanMathsBasic.cc

testCeylanRandomGeneratorFromPDF_exe_SOURCES = \
	testCeylanRandomGeneratorFromPDF.cc
	
testCeylanWhiteNoiseGenerator_exe_SOURCES    = testCeylanWhiteNoiseGenerator.cc
