SUFFIXES = .cc .h


testsmiddlewaredir=@CEYLAN_TEST_DIR@/middleware


testsmiddleware_PROGRAMS = \
	testCeylanLightWeightMarshaller.exe        \
	testCeylanMultiLwMarshalledServer.exe      \
	testCeylanMultiLwProtocolServer.exe        \
	testCeylanProtocolClient.exe
	

testCeylanLightWeightMarshaller_exe_SOURCES       = \
	testCeylanLightWeightMarshaller.cc
	
testCeylanMultiLwMarshalledServer_exe_SOURCES     = \
	testCeylanMultiLwMarshalledServer.cc
	
testCeylanMultiLwProtocolServer_exe_SOURCES       = \
	testCeylanMultiLwProtocolServer.cc

testCeylanProtocolClient_exe_SOURCES              = \
	testCeylanProtocolClient.cc
	
